get details from MercadoLibre API

--- a/vercel.json
+++ b/vercel.json
@@ -1,5 +1,5 @@
 {
   "rewrites": [
-    { "source": "/api/items/:id", "destination": "/api/details?id=$1" }
+    { "source": "/api/items/:id", "destination": "/api/details" }
   ]
 }
