--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
   "eslintConfig": {
     "extends": [
       "react-app",
+      "plugin:cypress/recommended",
       "plugin:prettier/recommended",
       "prettier/react"
     ]
@@ -42,6 +43,7 @@
   "devDependencies": {
     "cypress": "^4.5.0",
     "eslint-config-prettier": "^6.11.0",
+    "eslint-plugin-cypress": "^2.10.3",
     "eslint-plugin-prettier": "^3.1.3",
     "prettier": "^2.0.5"
   }
